<resources>
    <string name="app_name">MADD-PharmacyApp</string>
    <string name="Name">MediCare</string>
    <string name="i_m_an_admin">I\'m an Admin</string>
    <string name="i_m_not_an_admin">I\'m not an admin</string>
    <string name="login_btn">LogIn</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me_chkBox">Remember me</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="hve_acc_log_in">Already have an Account?Log in</string>
    <string name="join_now">Join Now</string>
    <string name="Register_btn">Create Account</string>
    <string name="User_name">Name</string>
    <string name="close_btn">Close</string>
    <string name="update_btn">Update</string>
    <string name="profile_img_change_btn"> Change profile Picture</string>
    <string name="feedback_title">Give us feedback</string>
    <string name="feedback_user">Your feedback about our app</string>
    <string name="feedback_submit">Submit</string>
    <string name="feedback_form">Feedback form</string>
    <string name="reset_pswd">Reset password </string>
    <string name="new_pwd">Type the new password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_name">user name</string>
    <string name="my_cart">My Cart</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_logout">Logout</string>
    <string name="reset_password">Reset Password</string>

    <string name="appname">MediCare</string>
    <string name="mediCare">MediCare</string>
    <string name="uploadpresbtn">UPLOAD PRESCRIPTION</string>
    <string name="cartbutton">See my cart</string>
    <string name="ascorilbtn">Ascoril 100ml LKR 180.00</string>
    <string name="bandbtn">Band-Aid 1 packet LKR 100.00</string>
    <string name="cetrizinebtn">Cetrizine-Hydrochloride 60ml LKR 240.00</string>
    <string name="biobtn">BIO-OIL 60ml LKR 1550.00</string>
    <string name="cancelbtn">Cancel</string>
    <string name="search">search product</string>
    <string name="addtocartbtn">ADD TO CART</string>
    <string name="product_description">Prevent infections and keep the wound clean</string>
    <string name="product_price"> 1 packet LKR 280.00</string>
    <string name="product_name">Band-Aid</string>
    <string name="minbtn">-</string>
    <string name="plusbtn">+</string>
    <string name="numtxt">1</string>
    <string name="orderbtn">ORDER</string>
    <string name="order1">Band-Aid 1 packet LKR 280.00</string>
    <string name="order2">Bio-Oil 60ml LKR 1550.00</string>
    <string name="order3">Iodex balm 9g LKR 300.00</string>
    <string name="mycart">My Cart</string>
    <string name="changebtn1">- 1 +</string>
    <string name="changebtn2">- 1 +</string>
    <string name="changebtn3">- 2 +</string>
    <string name="bt">aaa</string>


    <string name="prdct">Products</string>
    <string name="plstr">Plaster</string>
    <string name="balm">IODEX BALM 9G</string>
    <string name="oil">BIO OIL</string>
    <string name="qty">Quantity 1</string>
    <string name="tot">Total price</string>
    <string name="cont">CONTINUE</string>
    <string name="please">Please enter your delivery details</string>
    <string name="name">Name</string>
    <string name="pNo">Phone number</string>
    <string name="addr">Address</string>
    <string name="cty">City</string>
    <string name="confirm">CONFIRM</string>
    <string name="upload">CLICK TO UPLOAD YOUR PRESCRIPTION</string>
    <string name="plster">LKR280.00</string>
    <string name="balmm">LKR100.00</string>
    <string name="bio">LKR1,650.00</string>
    <string name="tot_amount">LKR1,930.00</string>
    <string name="rem"><![CDATA[Remove >]]></string>
    <string name="chnge"><![CDATA[Change >]]></string>
    <string name="pere">W.T Perera</string>
    <string name="your">Your delivery details</string>
    <string name="numbrr">+94 778345678</string>
    <string name="pera">No 24 Peradeniya road, Kandy .</string>
    <string name="kndy">Kandy</string>
    <string name="item">Your Items</string>
    <string name="pr_item">Item(s) price</string>
    <string name="pr_delivery">Delivery payable</string>
    <string name="pr_amount">Amount payable</string>
    <string name="del_pay">LKR200.00</string>
    <string name="pay_amou">LKR2,130.00</string>
    <string name="tv_name">Name</string>
    <string name="pn_PNO">Phone Number</string>
    <string name="pa_addr">Address</string>
    <string name="pa_city">City</string>
    <string name="Bal1">LKR100.00</string>

    <string name="admin">Admin panel</string>
    <string name="addItems">Add Items</string>
    <string name="manageItems">Manage Items</string>
    <string name="newOrders">New Orders</string>
    <string name="Pres">Prescriptions</string>
    <string name="cat">Categories</string>
    <string name="ItemName">Product Name</string>
    <string name="itemDes">Product Description</string>
    <string name="itemPrice">Product Price</string>
    <string name="delOrder">Delete Order</string>
    <string name="orderIt">Show Order Items</string>
    <string name="lgOut">Log Out</string>
    <string name="CusNme">Name : Sam Perera</string>
    <string name="Applychan">APPLY CHANGES</string>
    <string name="delproduct">DELETE PRODUCT</string>
    <string name="title_activity_my_home">MyHomeActivity</string>
    <string name="title_activity_home3">HomeActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="Quantity">Quantity</string>
    <string name="totItem">totItem</string>
    <string name="Feelings">How do you feel about our app</string>
    <string name="btn_submit_eedback">submit the feedback</string>
    <string name="write_your_review">Write your Review</string>
    <string name="submit_feedback">submit feedback</string>


</resources>