<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Display_Item">

    <ImageView
        android:id="@+id/band"
        android:layout_width="381dp"
        android:layout_height="194dp"
        app:layout_constraintBottom_toTopOf="@+id/product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediCare"
        app:layout_constraintVertical_bias="0.21"
        app:srcCompat="@drawable/band_aid" />

    <TextView
        android:id="@+id/mediCare"
        android:layout_width="403dp"
        android:layout_height="71dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/mediCare"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/addtocartbtn"
        android:layout_width="405dp"
        android:layout_height="54dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/addtocartbtn"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <Button
        android:id="@+id/minbtn"
        android:layout_width="92dp"
        android:layout_height="64dp"
        android:background="@color/colorAccent"
        android:text="@string/minbtn"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <Button
        android:id="@+id/plusbtn"
        android:layout_width="92dp"
        android:layout_height="64dp"
        android:background="@color/colorAccent"
        android:text="@string/plusbtn"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/minbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/numtxt"
        android:layout_width="79dp"
        android:layout_height="66dp"
        android:background="@color/colorAccent"
        android:text="@string/numtxt"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/addtocartbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="109dp"
        android:layout_height="71dp"
        android:layout_marginBottom="640dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/home"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mediCare"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="401dp"
        android:layout_height="36dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/product_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/product_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/band"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="281dp"
        android:layout_height="32dp"
        android:text="@string/product_price"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="280dp"
        android:layout_height="39dp"
        android:text="@string/product_description"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608" />
</androidx.constraintlayout.widget.ConstraintLayout>
